# repairwheel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  LICENSE.delvewheel  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml  test.yml
src/repairwheel/: __init__.py  __main__.py  compat.py  fileutil.py  machosign.py  machotools.py  repair.py  wheel.py
src/repairwheel/_vendor/: auditwheel.pyi  delvewheel.pyi  vendor.txt
src/repairwheel/_vendor/auditwheel/: __main__.py  condatools.py  elfutils.py  genericpkgctx.py  lddtree.py  libc.py  main.py  main_lddtree.py  main_repair.py  main_show.py  musllinux.py  patcher.py  repair.py  sboms.py  wheel_abi.py  wheeltools.py
src/repairwheel/_vendor/auditwheel-6.7.0.dist-info/: METADATA  RECORD
src/repairwheel/_vendor/auditwheel/policy/: __init__.py
src/repairwheel/_vendor/delocate/: _version.py  delocating.py  libsana.py  wheeltools.py
src/repairwheel/_vendor/delocate-0.1.dev700+g3a80932a1.dist-info/: METADATA  RECORD  direct_url.json  entry_points.txt  top_level.txt
src/repairwheel/_vendor/delocate/cmd/: common.py  delocate_addplat.py  delocate_fuse.py  delocate_listdeps.py  delocate_patch.py  delocate_path.py  delocate_wheel.py
src/repairwheel/linux/: __init__.py  elffile.py  monkeypatch.py  patcher.py  repair.py
src/repairwheel/macos/: __init__.py  machosign.py  machotools.py  repair.py
src/repairwheel/windows/: __init__.py  repair.py
tests/: conftest.py  test_common.py  test_linux.py  test_linux_syslib.py  test_windows.py  util.py
tests/gen_check/: test_check.py  test_generate.py
tests/testwheel/: testwheel-0.0.1-cp36-abi3-linux_x86_64.whl  testwheel-0.0.1-cp36-abi3-macosx_11_0_arm64.whl  testwheel-0.0.1-cp36-abi3-win_amd64.whl
tests/testwheel/build-native/: build-musl.sh  build.py  testwheel.c
tests/testwheel/build-native/testapp/: testapp.c
tests/testwheel/build-native/testdep/: testdep.c  testdep.h
tests/testwheel/build-python/: build.sh  pyproject.toml
tests/testwheel/build-python/testwheel/: __init__.py  testwheel.py
tests/testwheel/cp36-abi3-linux_x86_64/: testwheel-0.0.1-cp36-abi3-linux_x86_64.whl
tests/testwheel/cp36-abi3-linux_x86_64_musl/: testwheel-0.0.1-cp36-abi3-linux_x86_64.whl
tests/testwheel/cp36-abi3-macosx_10_11_arm64/: testwheel-0.0.1-cp36-abi3-macosx_10_11_arm64.whl
tests/testwheel/cp36-abi3-macosx_10_11_arm64/lib/: libtestdep.dylib
tests/testwheel/cp36-abi3-macosx_10_11_x86_64/: testwheel-0.0.1-cp36-abi3-macosx_10_11_x86_64.whl
tests/testwheel/cp36-abi3-macosx_10_11_x86_64/lib/: libtestdep.dylib
tests/testwheel/cp36-abi3-macosx_11_0_arm64/: testwheel-0.0.1-cp36-abi3-macosx_11_0_arm64.whl
tests/testwheel/cp36-abi3-macosx_11_0_arm64/lib/: libtestdep.dylib
tests/testwheel/cp36-abi3-macosx_11_0_x86_64/: testwheel-0.0.1-cp36-abi3-macosx_11_0_x86_64.whl
tests/testwheel/cp36-abi3-macosx_11_0_x86_64/lib/: libtestdep.dylib
tests/testwheel/cp36-abi3-win_amd64/: testwheel-0.0.1-cp36-abi3-win_amd64.whl
tests/testwheel/lib/: libtestdep.dylib
tests/testwheel/py3-none-any/: testwheel-0.0.1-py3-none-any.whl
tests/windows/: test_windows.py
tools/vendoring/patches/: auditwheel.patch  delocate.chmod.patch  delocate.patch
