[build-system]
requires = ["flit-core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "repairwheel"
version = "0.1.0"
description = "Repair any wheel, anywhere"
readme = "README.md"
requires-python = ">= 3.7"
license.file = "LICENSE"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
urls.homepage = "https://github.com/jvolkman/repairwheel"

dependencies = [
  "macholib >= 1.16",
  "delocate == 0.10.4",
  "packaging >= 23.0",
]

[tool.black]
line-length = 127
target-version = ["py311", "py310", "py39", "py38", "py37"]

[tool.isort]
profile = "black"
lines_between_types = 1
lines_after_imports = 2
line_length = 127
known_first_party = "build"
skip = []  # "build" is included in the default skip list
