[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repairwheel"
version = "0.1.0"
description = "Repair any wheel, anywhere"
readme = "README.md"
requires-python = ">= 3.7"
license.file = "LICENSE"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
urls.homepage = "https://github.com/jvolkman/repairwheel"

dependencies = [
  "delvewheel == 1.3.0",
  "importlib_metadata; python_version < \"3.8\"",
  "macholib >= 1.16",
  "packaging >= 23.0",
  "pyelftools >= 0.24",
]

[tool.black]
line-length = 127
target-version = ["py311", "py310", "py39", "py38", "py37"]

[tool.isort]
profile = "black"
lines_between_types = 1
lines_after_imports = 2
line_length = 127
known_first_party = "build"
skip = []  # "build" is included in the default skip list

[tool.hatch]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[tool.hatch.envs.test.scripts]
test = "pytest -v tests/ --ignore tests/gen_check/"
generate = "pytest -v tests/gen_check/test_generate.py"
check = "pytest -v tests/gen_check/test_check.py"

[tool.vendoring]
destination = "src/repairwheel/_vendor/"
requirements = "src/repairwheel/_vendor/vendor.txt"
namespace = "repairwheel._vendor"

protected-files = ["__init__.py", "vendor.txt"]
patches-dir = "tools/vendoring/patches"

[tool.vendoring.transformations]
drop = [
  "bin/",
  "delocate/tests/",
]
